# subsideo

./: .dockerignore  .gitignore  Apptainer.def  BOOTSTRAP.md  BOOTSTRAP_V1.1.md  CHANGELOG.md  CLAUDE.md  CONCLUSIONS_CSLC_N_AM.md  CONCLUSIONS_CSLC_SELFCONSIST_EU.md  CONCLUSIONS_CSLC_SELFCONSIST_NAM.md  CONCLUSIONS_DISP_EU.md  CONCLUSIONS_DISP_N_AM.md  CONCLUSIONS_DIST_EU.md  CONCLUSIONS_DIST_N_AM.md  CONCLUSIONS_DSWX.md  CONCLUSIONS_DSWX_EU_RECALIB.md  CONCLUSIONS_DSWX_N_AM.md  CONCLUSIONS_N_AM.md  CONCLUSIONS_RTC_EU.md  Dockerfile  Makefile  README.md  conda-env.yml  conftest.py  env.lockfile.linux-64.txt  env.lockfile.osx-arm64.txt  find_scene.py  key.json  pyproject.toml  run_eval.py  run_eval_cslc.py  run_eval_cslc_selfconsist_eu.py  run_eval_cslc_selfconsist_nam.py  run_eval_disp.py  run_eval_disp_egms.py  run_eval_dist.py  run_eval_dist_eu.py  run_eval_dist_eu_nov15.py  run_eval_dswx.py  run_eval_dswx_nam.py  (+1 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.0-research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/milestones/v1.1-research/: DISP_UNWRAPPER_SELECTION_BRIEF.md  cslc_selfconsist_aoi_candidates.md  dswx_fitset_aoi_candidates.md  dswx_proteus_atbd_ceiling_probe.md  rtc_eu_burst_candidates.md
.planning/milestones/v1.2-research/: cslc_gate_promotion_aoi_candidates.md
.planning/phases/01-environment-hygiene-framework-consolidation-guardrail-scaffolding/: 01-01-dryrun.txt  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-GREENLIGHT.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-09-PLAN.md  01-09-SUMMARY.md  deferred-items.md
.planning/phases/02-rtc-s1-and-cslc-s1-pipelines/: 02-04-SUMMARY.md
.planning/phases/02-rtc-s1-eu-validation/: 02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-cslc-s1-self-consistency-eu-validation/: 03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-VERIFICATION.md
.planning/phases/03-disp-s1-and-dist-s1-pipelines/: 03-01-SUMMARY.md  03-03-SUMMARY.md
.planning/phases/04-disp-s1-comparison-adapter-honest-fail/: 04-05-SUMMARY.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md
.planning/phases/04-dswx-s2-pipeline-and-full-interface/: 04-02-SUMMARY.md  04-DISCUSSION-LOG.md
.planning/phases/05-dist-s1-opera-v0-1-effis-eu/: 05-01-PLAN.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-04-SUMMARY.md  05-05-SUMMARY.md  05-07-SUMMARY.md  05-09-SUMMARY.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md
.planning/phases/05-fix-cross-phase-integration-wiring/: 05-02-SUMMARY.md
.planning/phases/06-dswx-s2-n-am-eu-recalibration/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-SUMMARY.md  06-07-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md
.planning/phases/06-wire-unused-data-modules-opera-metadata/: 06-02-SUMMARY.md
.planning/phases/07-results-matrix-release-readiness/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-SUMMARY.md  07-CONTEXT.md  07-PATTERNS.md  07-VERIFICATION.md
.planning/phases/08-planning-artifact-cleanup/: 08-01-SUMMARY.md
.planning/phases/09-cslc-egms-third-number-binding-reruns/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-05-PLAN.md  09-05-SUMMARY.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: dswx_fitset_aoi_selection.md  validation_methodology.md
eval-cslc-selfconsist-eu/: meta.json  metrics.json
eval-cslc-selfconsist-nam/: meta.json  metrics.json
eval-dist_eu/: effis_endpoint_lock.txt  meta.json  metrics.json
eval-dswx/: meta.json  metrics.json
eval-dswx_nam/: meta.json  metrics.json
eval-rtc/: meta.json  metrics.json
eval-rtc-eu/: meta.json  metrics.json
notebooks/: dswx_aoi_selection.ipynb  dswx_recalibration.ipynb
results/: matrix.md  matrix_manifest.yml
scripts/: derive_burst_ids_from_opera.py  env07_diff_check.py  probe_cslc_aoi_candidates.py  probe_rtc_eu_candidates.py  recalibrate_dswe_thresholds.py  recalibrate_dswe_thresholds_results.json
src/subsideo/: __init__.py  _cog.py  _metadata.py  _mp.py  cli.py  config.py
tests/: conftest.py
tests/product_quality/: test_compare_cslc.py  test_compare_disp.py  test_compare_dist.py  test_compare_rtc.py  test_disp_diagnostics.py  test_matrix_schema_disp.py  test_prepare_for_reference.py  test_selfconsistency_coherence_stack.py  test_selfconsistency_ramp.py
tests/reference_agreement/: conftest.py  test_compare_disp.py  test_compare_dist.py  test_compare_rtc.py  test_matrix_writer_disp.py
tests/unit/: test_asf.py  test_bootstrap.py  test_burst_db.py  test_cdse.py  test_cli.py  test_cli_asf_autofetch.py  test_cog_helper.py  test_compare_cslc.py  test_compare_cslc_egms_l2a.py  test_compare_disp.py  test_compare_dist.py  test_compare_dswx.py  test_compare_dswx_shoreline.py  test_compare_rtc.py  test_config.py  test_criteria_dswx_investigation.py  test_criteria_registry.py  test_cslc_pipeline.py  test_dem.py  test_disp_pipeline.py  test_dist_pipeline.py  test_dswx.py  test_dswx_decomposition.py  test_dswx_pipeline.py  test_dswx_region_resolution.py  test_dswx_thresholds.py  test_harness.py  test_harness_jrc_retry.py  test_ionosphere.py  test_matrix_schema.py  test_matrix_schema_dswx.py  test_matrix_writer.py  test_matrix_writer_dist.py  test_matrix_writer_dswx.py  test_metadata.py  test_metadata_wiring.py  test_metrics.py  test_mp_helper.py  test_natural_earth.py  test_orbits.py  (+15 more)
tests/validation/: test_disp_candidates.py
(+238 files in other folders)
