[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "subsideo"
version = "0.1.0"
description = "OPERA-equivalent geospatial product pipelines for the European Union, built on Sentinel-1/2 and the Copernicus Data Space Ecosystem."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alexandru Vasile", email = "138780223+AlexTzk@users.noreply.github.com" },
]
keywords = [
    "SAR",
    "InSAR",
    "Sentinel-1",
    "Sentinel-2",
    "surface displacement",
    "surface water",
    "surface disturbance",
    "geospatial",
    "earth observation",
    "Copernicus",
    "OPERA",
    "remote sensing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]

# ---------------------------------------------------------------------------
# Core dependencies (always installed)
# Pinned to lower-bounds only; upper bounds set per-group where needed.
# isce3 and dolphin are conda-forge-only — see install docs.
# ---------------------------------------------------------------------------
dependencies = [
    # --- Data access ---
    "pystac-client>=0.8,<1",    # STAC API search (CDSE + ASF DAAC validation queries)
    "boto3>=1.36",              # S3 direct access to CDSE eodata bucket
    "requests-oauthlib>=2.0,<3",# CDSE OAuth2 client credentials flow
    "requests>=2.32,<3",        # HTTP client (CDDIS IONEX, general)
    "dem-stitcher>=2.5,<3",     # GLO-30 Copernicus DEM download and stitching
    "sentineleof>=0.11,<1",     # Sentinel-1 POE/RESORB orbit file download
    "s1-orbits>=0.2,<1",        # Alternative orbit download from AWS Open Data
    "earthaccess>=0.12,<1",     # NASA Earthdata auth and bulk download
    "asf-search>=8.0,<13",     # ASF DAAC search for OPERA reference products
    "geopandas>=1.0,<2",        # GeoDataFrame: spatial joins, burst footprint DB
    "mgrs>=1.5,<2",             # MGRS tile ID resolver (GeoTrans C wrapper, pure-Python install)

    # --- Raster I/O and geospatial ---
    "rasterio>=1.4,<2",
    "pyproj>=3.7,<4",
    "shapely>=2.0,<3",
    "h5py>=3.12,<4",            # HDF5 for CSLC/DISP/RTC products
    "xarray>=2024.10",
    "zarr>=2.18",               # cloud-optimised intermediate storage; upper bound dropped for opera-utils[disp]>=0.22 (zarr>=3) — subsideo has no direct zarr API use
    "fsspec>=2024.10",
    "s3fs>=2024.10",

    # --- Numerics ---
    "numpy>=1.26,<3",
    "scipy>=1.14,<2",

    # --- Utilities ---
    "typer>=0.15,<1",           # CLI entrypoint
    "pydantic>=2.10,<3",        # config/schema validation
    "pydantic-settings>=2.7,<3",# BaseSettings with env/dotenv/YAML layered config
    "rich>=13.9,<15",           # progress / console output
    "python-dotenv>=1.0,<2",    # credential management (.env)
    "tqdm>=4.67,<5",
    "loguru>=0.7,<1",
    "pyyaml>=6.0,<7",          # YAML config parsing (ISCE3 workflow files)
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Conda-forge-only deps — install via conda/mamba, not pip.
# Listed here for metadata completeness; `conda-env.yml` is the install source.
conda = [
    # isce3 >= 0.18: conda-forge only; declared in conda-env.yml
    "opera-utils>=0.25",        # OPERA burst DB, CSLC/DISP helpers
    "s1-reader>=0.3",           # Sentinel-1 SLC burst reader (ISCE3-compatible)
    "mintpy>=1.6.3",            # InSAR time-series analysis
    "gdal>=3.8",                # system GDAL binding
]

# Full geospatial stack — adds vector/DataFrame support
geo = [
    "fiona>=1.9",
    "pyogrio>=0.7",
]

# Visualisation + notebook support
viz = [
    "matplotlib>=3.8",
    "cartopy>=0.22",
    "folium>=0.16",
    "hvplot>=0.10",
    "ipywidgets>=8.1",
    "jupyter>=1.0",
]

# Validation against OPERA N.Am. and EGMS EU products
validation = [
    "opera-utils[disp]>=0.25",  # remote DISP-S1 access via Earthdata
    "pandas>=2.2",
    "scikit-image>=0.22",       # image comparison metrics (SSIM, RMSE)
    "statsmodels>=0.14",        # spatial statistics for validation reports
    # EGMStoolkit 0.3.0 is GitHub-only; the upstream setup.cfg is missing
    # a src-layout package_dir entry, so a plain `pip install` of the tag
    # installs dist-info only. Use the fork/branch below once published,
    # or install manually per run_eval_disp_egms.py header.
    # "EGMStoolkit @ git+https://github.com/alexisInSAR/EGMStoolkit.git",
]

# Async downloads for large EU frame sets
async = [
    "aiohttp>=3.9",
    "aiofiles>=23.2",
]

# Documentation build
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

# Development tooling
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "pytest-mock>=3.14,<4",
    "pytest-asyncio>=0.24,<1",
    "hypothesis>=6.120,<7",
    "pre-commit>=4.0,<5",
    "ruff>=0.8,<1",
    "mypy>=1.14,<2",
    "types-tqdm>=4.67",
    "ipython>=8.30,<9",
]

# Everything
all = [
    "subsideo[geo,viz,validation,async,docs,dev]",
]

# ---------------------------------------------------------------------------
# CLI entry points
# ---------------------------------------------------------------------------
[project.scripts]
subsideo = "subsideo.cli:app"

# ---------------------------------------------------------------------------
# URLs
# ---------------------------------------------------------------------------
[project.urls]
Homepage        = "https://github.com/AlexTzk/subsideo"
Documentation   = "https://subsideo.readthedocs.io"
Repository      = "https://github.com/AlexTzk/subsideo"
"Issue Tracker" = "https://github.com/AlexTzk/subsideo/issues"
Changelog       = "https://github.com/AlexTzk/subsideo/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Build configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/subsideo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "conda-env.yml",
    "environment-dev.yml",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "ANN101", # self annotation
    "ANN102", # cls annotation
]

[tool.ruff.lint.isort]
known-first-party = ["subsideo"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true  # GDAL / ISCE3 stubs not available
warn_return_any        = true
warn_unused_configs    = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths       = ["tests"]
addopts         = "-ra -q --cov=subsideo --cov-report=term-missing"
asyncio_mode    = "auto"
markers = [
    "slow: tests that run real processing pipelines (deselect with -m 'not slow')",
    "integration: tests requiring live CDSE or ASF DAAC credentials",
    "validation: cross-comparison against OPERA reference products",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["src/subsideo"]
omit     = ["*/tests/*", "*/cli.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
